--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>web dev portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="Styles/Portfolio.css">
 </head>
-<body>
+<body class="open-sans-Normal ">
+<header class="header ">
+        <nav>
+        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <ul>
+            <li><a class="dark-2" href="">Portfolio</a></li>
+            <li><a class="dark-2" href="">Blog</a></li>
+            <li><a href=""><button class="btn-primary">Hire me</button></a></li>
+        </ul>
+    </nav>
+    <div class="banner">
+        <div class="banner-content dark">
+            <h4 class="banner-greeting dark-2">Hi Iam</h4>
+            <h1 class="banner-title">Mary hardey</h1>
+            <p class="banner-discription">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi in, beatae dolores aut blanditiis ex corrupti sit perspiciatis quaerat quis recusandae vitae veritatis labore officiis. Blanditiis excepturi error quia enim.
+            </p>
+            <p>
+                <button class="btn-primary">download cv</button>
+                <button class="btn-primary">contact</button>
+
+            </p>
+        </div>
+        <img class="banner-profile-picture" src="images/hardy.png" alt="">
+
+    </div>
     
+
+
+</header>
 </body>
+
 </html>
